hphp/test/zend/good/Zend/tests/add_007.php.expectf
Fatal error: Uncaught exception 'InvalidOperationException' with message 'Cannot perform mathematical operation on HH\vec and string' in %s/add_007.php:7
Stack trace:
%A
